# ComputerVision-QR_Code

./: CMakeLists.txt  QR_Code_Webcam.py  README.md  camera-settings.txt  main_ros.cpp  package.xml  qrCode  qrCode.cpp  qr_code_image_to_array.cpp  qr_code_testcases.cpp
camera_recog/: CMakeLists.txt  example-2.mkv  example.mkv  main.cpp  qr.h  qr_br.cpp  test.cpp  testing_data.mkv
camera_recog/src/: cvlocalizer.cpp  qr.h
launch/: locate.launch
qr_combinatorics/: CMakeLists.txt  Makefile  execute.cpp  helpers.cuh  qr.cpp  qr.h  qr.ho  qr_br.cpp  qr_combinatorics.cu  qr_combinatorics_br.cu  qr_read.cuh  stitching.cpp
src/: cvlocalizer.cpp  qr.h  qr_br.cpp  qr_tr.cpp
