<package format="2">
  <name>qrpart</name>
  <version>1.0.0</version>
  <description>
    Decodes Partial QR Codes
  </description>
  <author>Wilson Watson</author>
  <maintainer email="wilsonwatson@utexas.edu">Wilson Watson</maintainer>
  <license>None</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  
</package>
