cmake_minimum_required(VERSION 2.8)
project( locate )
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( locate main.cpp qr_br.cpp )
target_link_libraries( locate ${OpenCV_LIBS} )
