cmake_minimum_required(VERSION 3.10)
project( locate )
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package( OpenCV 3.3 REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( locate test.cpp src/qr_br.cpp src/cvlocalizer.cpp )
target_link_libraries( locate ${OpenCV_LIBS} )
